@@ -41,7 +41,7 @@ namespace Claunia.PropertyList
         /// This constant will be different depending on the operating system on
         /// which you use this library.
         /// </summary>
-        readonly static string NEWLINE = Environment.NewLine;
+        readonly internal static string NEWLINE = Environment.NewLine;
 
 
         /// <summary>
@@ -202,12 +202,11 @@ namespace Claunia.PropertyList
         /// <param name="value">The value to represent as a NSObject.</param>
         /// <returns>A NSObject representing the given value.</returns>
         /// <exception cref="SystemException">When one of the values contained in the map cannot be represented by a NSObject.</exception>
-        // TODO: Implement NSSet class
-        /*
-        public static NSSet Wrap(List<Object> value) {
+        /// TODO: Implement this.Wrap(Object)
+/*        public static NSSet Wrap(List<Object> value) {
             NSSet set = new NSSet();
-            for (Object o : value.toArray())
-                set.addObject(wrap(o));
+            foreach (Object o in value)
+                set.AddObject(Wrap(o));
             return set;
         }*/
 
