@@ -1,5 +1,12 @@
 2015-02-17  Natalia Portillo  <claunia@claunia.com>
 
+	* NSSet.cs:
+	* NSObject.cs:
+	* plist-cil.csproj:
+	  Implemented NSSet.
+
+2015-02-17  Natalia Portillo  <claunia@claunia.com>
+
 	* NSString.cs:
 	* plist-cil.csproj:
 	  Implement NSString.
